# EBACFSPython_CloneTwitter

./: Dockerfile  README.md  docker-compose.yml  entrypoint.py  pyproject.toml  requirements.txt
.build/workflows/: build.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py
accounts/templates/accounts/: login.html  signup.html
static/style/: style.css
tweets/: admin.py  models.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_tweet_options_remove_tweet_likes_and_more.py
tweets/templates/tweets/: create_tweet.html  home.html  profile.html  search_results.html
twitter_clone/: settings.py  urls.py  views.py
