[project]
name = "twitter-clone"
version = "0.1.0"
description = "A Twitter clone using Django"
authors = [
    {name = "Julio Silva",email = "silvajulio@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django>=5.1.6,<6.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "python-decouple>=3.8,<4.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"